[tool.poetry]
name = "pyopt"
version = "0.1.0"
description = "Notes on optimization with python."
authors = ["Jader Brasil <jaderebrasil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
pandas = "^1.4.3"
numpy = "^1.23.2"
sklearn = "^0.0"
PuLP = "^2.6.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
